Fix initial mirror axis positions

There is some redundancy with KisImage storing the relative position
of mirror axes (required by resource snapshots, but why relative?),
and KisDocument the absolute positions as part of the display settings.
Their default initializaion did not match though.

Creating/opening another document with default mirror settings while
another document was open would either pick the default initialized
absolute or relative position, depending on whether the current settings
are default or not.

Now KisDocument properly initializes its mirror config, and is also
responsible for keeping the image property in sync.

BUG:423830